# diagnostyka-wyniki-crawler

./: .gitignore  README.md  SITE_STRUCTURE.md  pyproject.toml
src/: __init__.py  wyniki_crawler.py  xml_to_csv.py
tests/: .env
